# ArtifactsMMO-RustBot

./: .env.example  .gitignore  Cargo.toml  Config.toml  DIAGRAMME_ACTIONS.drawio  README.md  todo.md
src/: config.rs  logging.rs  main.rs
src/ai/: constants.rs  goap.rs  goap_example_2.rs  init.rs  mod.rs
src/ai/actions/: attack_enemy.rs  drink_healing_potion.rs  find_equipment.rs  find_target.rs  mod.rs  move_to_enemy.rs  repos.rs
src/ai/goals/: attack.rs  heal.rs  mod.rs
src/api/: accounts.rs  achievements.rs  badges.rs  characters.rs  effects.rs  events.rs  grand_exchange.rs  items.rs  leaderboard.rs  maps.rs  mod.rs  monsters.rs  my_account.rs  my_characters.rs  npcs.rs  resources.rs  server_details.rs  tasks.rs  utils.rs
src/gameplay/: fight.rs  gathering.rs  mod.rs
src/types/ai/: agent_facts.rs  mod.rs  utility_ai.rs
src/types/common/: mod.rs  pagination_params.rs  settings.rs  validated_string.rs  validated_string_with_spaces.rs
src/types/game/: achievement_type.rs  character.rs  character_additionnal_info.rs  equipment_slot.rs  event_type.rs  item_type.rs  map.rs  map_content_type.rs  mod.rs  npc_type.rs  score_type.rs  skill.rs  skin_type.rs  task_type.rs
