[package]
name = "artefacts_mmo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
config = "0.15.15"
dotenv = "0.15.0"
regex = "1.11.2"
reqwest = "0.12.23"
secrecy = {version ="0.10.3", features = ["serde"]}
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
